Added swagger and tested
